--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
